{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 24,
  "lineage": "6d1fcf17-b76f-6c8a-e322-44826cc45a72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb58b9d3d4d6f485",
            "arn": "arn:aws:ec2:eu-north-1:645123576140:elastic-ip/eipalloc-0eb58b9d3d4d6f485",
            "domain": "vpc",
            "id": "eipalloc-0eb58b9d3d4d6f485",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-192-37-39.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.192.37.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iii-devops-gateway-eip"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-gateway-eip",
              "Project": "iii-devops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b58ea55eca1c0ee1",
            "arn": "arn:aws:ec2:eu-north-1:645123576140:elastic-ip/eipalloc-0b58ea55eca1c0ee1",
            "association_id": "eipassoc-0572bb3bce01a27dc",
            "domain": "vpc",
            "id": "eipalloc-0b58ea55eca1c0ee1",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0fe5fa6dba128d560",
            "private_dns": "ip-10-0-1-104.eu-north-1.compute.internal",
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-16-192-16-229.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.192.16.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iii-devops-nat-eip"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-nat-eip",
              "Project": "iii-devops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "caller_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0826f7fac3eaaa32a",
            "arn": "arn:aws:ec2:eu-north-1:645123576140:instance/i-0c5ab18efd464aa22",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5ab18efd464aa22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "follow",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4db9a7eccf7755c",
            "private_dns": "ip-10-0-2-82.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "throughput": 0,
                "volume_id": "vol-0e91255be82ca9ca5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fe7455af5a2b9dc",
            "tags": {
              "Name": "iii-devops-caller-worker"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-caller-worker",
              "Project": "iii-devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01aee883ff0d43de3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.engine",
            "aws_security_group.engine",
            "aws_security_group.gateway",
            "aws_security_group.workers",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0826f7fac3eaaa32a",
            "arn": "arn:aws:ec2:eu-north-1:645123576140:instance/i-0795916f2f47feed1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0795916f2f47feed1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "follow",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd64dec4d96bbdc6",
            "private_dns": "ip-10-0-2-64.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "throughput": 0,
                "volume_id": "vol-03d2f91bdc40b35c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fe7455af5a2b9dc",
            "tags": {
              "Name": "iii-devops-engine"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-engine",
              "Project": "iii-devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06769b28bffb2b6dc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.engine",
            "aws_security_group.gateway",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0826f7fac3eaaa32a",
            "arn": "arn:aws:ec2:eu-north-1:645123576140:instance/i-01580888157d0b893",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01580888157d0b893",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "follow",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c5809e0715b573c",
            "private_dns": "ip-10-0-1-139.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-13-62-20-100.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.20.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "throughput": 0,
                "volume_id": "vol-005915437060b22c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034aa51f96736d4ff",
            "tags": {
              "Name": "iii-devops-gateway"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-gateway",
              "Project": "iii-devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083c21598b61a0729"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.engine",
            "aws_security_group.engine",
            "aws_security_group.gateway",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "math_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0826f7fac3eaaa32a",
            "arn": "arn:aws:ec2:eu-north-1:645123576140:instance/i-01e8c458cdd585667",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e8c458cdd585667",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "follow",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0562d0acb9d24f1fb",
            "private_dns": "ip-10-0-2-211.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "iii-devops"
                },
                "throughput": 0,
                "volume_id": "vol-0750dd37dfb6f5a1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fe7455af5a2b9dc",
            "tags": {
              "Name": "iii-devops-math-worker"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-math-worker",
              "Project": "iii-devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01aee883ff0d43de3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.engine",
            "aws_security_group.engine",
            "aws_security_group.gateway",
            "aws_security_group.workers",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:internet-gateway/igw-028e9e628dfe2ea6e",
            "id": "igw-028e9e628dfe2ea6e",
            "owner_id": "645123576140",
            "tags": {
              "Name": "iii-devops-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-igw",
              "Project": "iii-devops"
            },
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b58ea55eca1c0ee1",
            "association_id": "eipassoc-0572bb3bce01a27dc",
            "connectivity_type": "public",
            "id": "nat-010c387ff3b6dcf47",
            "network_interface_id": "eni-0fe5fa6dba128d560",
            "private_ip": "10.0.1.104",
            "public_ip": "16.192.16.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-034aa51f96736d4ff",
            "tags": {
              "Name": "iii-devops-nat"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-nat",
              "Project": "iii-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:route-table/rtb-029467349ade7e201",
            "id": "rtb-029467349ade7e201",
            "owner_id": "645123576140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-010c387ff3b6dcf47",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iii-devops-private-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-private-rt",
              "Project": "iii-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:route-table/rtb-051eb95e3e4cf81c6",
            "id": "rtb-051eb95e3e4cf81c6",
            "owner_id": "645123576140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028e9e628dfe2ea6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iii-devops-public-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-public-rt",
              "Project": "iii-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0698904242f3dd8d2",
            "route_table_id": "rtb-029467349ade7e201",
            "subnet_id": "subnet-09fe7455af5a2b9dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc47afadb4266c02",
            "route_table_id": "rtb-051eb95e3e4cf81c6",
            "subnet_id": "subnet-034aa51f96736d4ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:security-group/sg-06769b28bffb2b6dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06769b28bffb2b6dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP API (proxied from gateway)",
                "from_port": 3111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3111
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Worker WebSocket RPC",
                "from_port": 49134,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 49134
              },
              {
                "cidr_blocks": [],
                "description": "SSH from gateway only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083c21598b61a0729"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "iii-devops-engine-sg",
            "name_prefix": "",
            "owner_id": "645123576140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iii-devops-engine-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-engine-sg",
              "Project": "iii-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:security-group/sg-083c21598b61a0729",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083c21598b61a0729",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iii-devops-gateway-sg",
            "name_prefix": "",
            "owner_id": "645123576140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iii-devops-gateway-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-gateway-sg",
              "Project": "iii-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:security-group/sg-01aee883ff0d43de3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01aee883ff0d43de3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from gateway only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083c21598b61a0729"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "iii-devops-workers-sg",
            "name_prefix": "",
            "owner_id": "645123576140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iii-devops-workers-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-workers-sg",
              "Project": "iii-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:subnet/subnet-09fe7455af5a2b9dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe7455af5a2b9dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "645123576140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iii-devops-private"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-private",
              "Project": "iii-devops"
            },
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:subnet/subnet-034aa51f96736d4ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034aa51f96736d4ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "645123576140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iii-devops-public"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-public",
              "Project": "iii-devops"
            },
            "vpc_id": "vpc-07caa21264feeff98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:645123576140:vpc/vpc-07caa21264feeff98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00957601f9023e984",
            "default_route_table_id": "rtb-0af8f8b1096534021",
            "default_security_group_id": "sg-053df9e0b2024ccd7",
            "dhcp_options_id": "dopt-0e2f004f2c42c5f81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07caa21264feeff98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af8f8b1096534021",
            "owner_id": "645123576140",
            "tags": {
              "Name": "iii-devops-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "iii-devops-vpc",
              "Project": "iii-devops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}